# whisper-video-to-text

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  Dockerfile  LICENSE.txt  Makefile  PROJECT_IMPROVEMENTS.md  README.md  demo.cast  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  mp4_to_text.py  pyproject.toml  tasks.md  whisper_video_to_text.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  gitlab-mirror.yml  mirror-to-gitlab.yml  mirror.yml  update-readme-badge.yml
.kiro/specs/github-actions-fix/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: blog-draft.md  handoff-multi-file-queue.md  job-controls-and-queue-handoff.md  project-handoff.md
tests/: test_cancellation.py  test_cli.py  test_convert.py  test_deeper_refactors.py  test_download.py  test_history.py  test_pipeline.py  test_progress.py  test_time_formatting.py  test_transcribe.py  test_web_media_formats.py  test_web_upload.py  verify_history.py
whisper_video_to_text/: __init__.py  __main__.py  cli.py  convert.py  download.py  errors.py  pipeline.py  transcribe.py
whisper_video_to_text/web/: __init__.py  main.py  progress.py  views.py
whisper_video_to_text/web/static/: app.js  nord-theme.css  style.css  styles.css
whisper_video_to_text/web/templates/: index.html
