[project]
name = "whisper-video-to-text"
version = "0.1.0"
description = "Convert MP4 video files to text using Whisper, with support for YouTube downloads and audio extraction."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openai-whisper==20231117",
    "yt-dlp==2024.5.27",
    "tqdm==4.66.4"
]

[project.scripts]
whisper-video-to-text = "whisper_video_to_text.cli:main"
whisper_video_to_text = "whisper_video_to_text.cli:main"

[project.optional-dependencies]
web = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2"
]
dev = [
    "black>=24.0",
    "mypy>=1.8",
    "pre-commit>=3.7",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.setuptools]
packages = ["whisper_video_to_text"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
